Minor changes to cookies modal functionality

--- a/src/apps/copo_core/templates/copo/component_cookie_modal.html
+++ b/src/apps/copo_core/templates/copo/component_cookie_modal.html
@@ -5,8 +5,9 @@
 
     #cookieModalTitle {
         color: white;
-        font-size: 20px;
+        font-size: 28px;
         font-weight: bold;
+        text-align: center;
     }
 
     #cookieModalBody {
@@ -48,20 +49,20 @@
     $(document).ready(function () {
         // Cookie consent functions
         function setCookie(name, value, days) {
-            var expires = "";
+            let expires = "";
             if (days) {
-                var date = new Date();
+                let date = new Date();
                 date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
                 expires = "; expires=" + date.toUTCString();
             }
-            document.cookie = name + "=" + (value || "") + expires + "; path=/";
+            document.cookie = name + "=" + (value || "") + expires + "; path=/; SameSite=None; Secure";
         }
 
         function getCookie(name) {
-            var nameEQ = name + "=";
-            var ca = document.cookie.split(';');
-            for (var i = 0; i < ca.length; i++) {
-                var c = ca[i];
+            let nameEQ = name + "=";
+            let ca = document.cookie.split(';');
+            for (let i = 0; i < ca.length; i++) {
+                let c = ca[i];
                 while (c.charAt(0) == ' ') c = c.substring(1, c.length);
                 if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
             }
