--- a/src/apps/copo_core/templates/copo/components_template.html
+++ b/src/apps/copo_core/templates/copo/components_template.html
@@ -593,7 +593,13 @@
     <a  title="Download Blank Manfiest Template"
             class="big circular ui icon brown button download-blank-manifest-template copo-tooltip">
         <i class="icon download sign"></i>
-    </a>    
+    </a>
+
+    <!-- button to download SOP spreadsheet -->
+    <a title="Download Standard Operating Procedure (SOP)"
+        class="big circular ui icon yellow button download-sop copo-tooltip">
+        <i class="icon download sign"></i>
+    </a>
 
     <!-- button to for dtol_sample_managers to accept/reject submitted samples -->
     <button style="display: none" title="Accept/Reject TOL Samples"
