--- a/src/apps/copo_core/templates/copo/privacy_notice.html
+++ b/src/apps/copo_core/templates/copo/privacy_notice.html
@@ -59,6 +59,8 @@
         <h3>Information collected:</h3>
         <ul id="privacy_notice_ul1">
             <li>Internet Protocol (IP) address</li>
+            <li>Operating system</li>
+            <li>Browser</li>
             <li>Firstname, lastname and username after you sign into the service with your <a
                     href="https://orcid.org/">Orcid</a> credentials
             </li>
@@ -81,7 +83,9 @@
             <li>To provide the user access to the service</li>
             <li>To answer support request sent by the user</li>
             <li>To monitor errors and exceptions that may occur during metadata submission</li>
-            <li>To register your email address with your COPO user account</li>
+            <li>To register your email address with your COPO user account and to submit 
+                your email address to public repositories after manifest submissions
+            </li>
         </ul><br>
 
         <h2>Data Access</h2>
@@ -110,7 +114,8 @@
             </li>
             <li>COPO obscures your email address and omits your name from the <a style="color: mediumblue;" href="/api">COPO Application
                     Programming Interface (API)</a>
-                method results after a manifest submission.
+                method results after a manifest submission. However, your email address will be submitted to public repositories and will 
+                be visible on public records as a metadata submitter.
             </li>
             <li>Access to the web and security logs containing personal data are restricted to the relevant COPO team
                 developers
