Added link to COPO readthedocs documentation

--- a/src/apps/copo_landing_page/templates/about.html
+++ b/src/apps/copo_landing_page/templates/about.html
@@ -83,6 +83,11 @@
             <a style="text-decoration: underline; color: mediumblue;" href="/about/privacy_notice">Privacy Notice</a>
             and <a style="text-decoration: underline; color: mediumblue;" href="/about/terms_of_use">Terms of Use</a>.
         </p>
+        <br>
+        <p>
+            More information about COPO is available in its <a href="https://copo-docs.readthedocs.io/en/latest/">
+            documentation</a>.
+        </p>
         <hr>
     </div>
 
