for bge-checker

--- a/src/apps/copo_dtol_submission/templates/copo/copo_sample_accept_reject.html
+++ b/src/apps/copo_dtol_submission/templates/copo/copo_sample_accept_reject.html
@@ -207,9 +207,9 @@
                 <li class="hot_tab in">
                     <a data-toggle="tab" href="rejected">Rejected Samples</a>
                 </li>
-                <li class="hot_tab in">
+                <!--li class="hot_tab in" >
                     <a data-toggle="tab" href="private">Private Samples</a>
-                </li>
+                </li-->
             </ul>
 
 
