Added a start and end comment for when the 'Cookie' modal begins and ends

--- a/src/apps/copo_core/templates/copo/component_cookie_modal.html
+++ b/src/apps/copo_core/templates/copo/component_cookie_modal.html
@@ -20,11 +20,12 @@
     }
 </style>
 
+<!-- Cookie modal -->
 <div id="cookieModal" class="modal fade" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div id="cookieModalHeader" class="modal-header">
-                <h5 id="cookieModalTitle" class="modal-title">We value your privacy</h5>
+                <h5 id="cookieModalTitle" class="modal-title">Privacy & Transparency</h5>
             </div>
             <div id="cookieModalBody" class="modal-body">
                 <p>This website requires cookies, fonts and the limited processing of your personal data 
@@ -44,6 +45,7 @@
         </div>
     </div>
 </div>
+<!-- End of Cookie modal -->
 
 <script>
     $(document).ready(function () {
