Bug fix: Closed button tag for 'View Images' button

--- a/src/apps/copo_dtol_submission/templates/copo/copo_sample_accept_reject.html
+++ b/src/apps/copo_dtol_submission/templates/copo/copo_sample_accept_reject.html
@@ -216,6 +216,7 @@
                 </button>
                 <button class="view-images tiny ui teal basic button" tabindex="0" aria-controls="" type="button"><span>View
                         Images</span>
+                </button>
             </span>
 
 
