Adding missing js scripts imports

--- a/src/apps/copo_sample/templates/copo/copo_sample.html
+++ b/src/apps/copo_sample/templates/copo/copo_sample.html
@@ -321,8 +321,11 @@
     <script src="{% static 'copo/js/copo_sample.js' %}"></script>
     <script src="{% static 'copo/js/dtol_functions.js' %}"></script>
     <script src="{% static 'copo/js/copo_parse_spreadsheet.js' %}"></script>
-    <script src="{% static 'copo/js/csv_column_updates.js' %}"></script>
+    <!-- <script src="{% static 'copo/js/csv_column_updates.js' %}"></script> -->
     <script src="{% static 'copo/js/fastdom.js' %}"></script>
+    <script src="{% static 'copo/js/filesaver.js' %}"></script>
+    <script src="{% static 'copo/js/jszip-utils.min.js' %}"></script>
+    <script src="{% static 'copo/js/jszip.min.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
     <script src="https://cdn.datatables.net/plug-ins/1.11.5/sorting/datetime-moment.js"></script>
 {% endblock %}
