--- a/src/apps/copo_core/templates/copo/privacy_notice.html
+++ b/src/apps/copo_core/templates/copo/privacy_notice.html
@@ -132,7 +132,7 @@
         </p><br>
 
         <h2>Questions</h2>
-        <p>Any questions or comments concerning this Privacy Policy can be addressed to us by <a
+        <p>Any questions or comments concerning this Privacy Notice can be addressed to us by <a
                 href="/#contact-sec">contacting us</a>.
         </p>
         <br>
