updating icons and landing page

--- a/src/apps/copo_landing_page/templates/frontpage.html
+++ b/src/apps/copo_landing_page/templates/frontpage.html
@@ -29,6 +29,7 @@
             </div>
 
         {% endif %}
+
         <section>
 
 
@@ -38,12 +39,14 @@
             </div>
             <br><br><br><br><br><br><br><br><br>
             <div id="copo-icon">
-                <img src="{% static "assets/img/copo_white_800.png" %}" alt="copo_white image">
+                <!--<img src="{% static "assets/img/COPO-logo-full-CMYK.png" %}" alt="copo_white image">-->
             </div>
 
+            <!--
             <div class="green-subtitle">
-                share your data with fellow researchers
+                FAIR Data Brokering for the Life Sciences
             </div>
+        -->
 
             <div class="button_bar big">
                 <a href="https://copo-project.org/copo">
@@ -111,7 +114,7 @@
 
     </div>
     <br/><br/>
-    <footer class="for-full-back" style="background-color: #cdcdcd; min-height: 100px; padding:20px 50px 0 0" id="footer">
+    <footer class="for-full-back" style="background-color: white; min-height: 100px; padding:20px 50px 0 0" id="footer">
     <div class="pull-right">
         <a href="https://www.earlham.ac.uk/">
             <img class="img-responsive" src="/static/assets/img/ei.png" width="200" height="200" style=""
