--- a/src/apps/copo_landing_page/templates/statistics.html
+++ b/src/apps/copo_landing_page/templates/statistics.html
@@ -2,7 +2,7 @@
     <div class="card link">
         <div class="ui statistic">
             <div class="value">
-                <i class="dna icon teal"></i> <span id="num_samples">0</span>
+                <i class="dna icon" style="color:#aec278"></i> <span id="num_samples">0</span>
             </div>
             <div class="label">
                 Samples
@@ -12,7 +12,7 @@
     <div class="card">
         <div class="ui statistic">
             <div class="value">
-                <i class="folder open icon violet"></i><span id="num_profiles">0</span>
+                <i class="folder open icon" style="color:#659193"></i><span id="num_profiles">0</span>
             </div>
             <div class="label">
                 Profiles
@@ -22,7 +22,7 @@
     <div class="card">
         <div class="ui statistic">
             <div class="value">
-                <i class="user icon orange"></i><span id="num_users">0</span>
+                <i class="user icon" style="color:#ba5d6d"></i><span id="num_users">0</span>
             </div>
             <div class="label">
                 Users
@@ -32,7 +32,7 @@
     <div class="card">
         <div class="ui statistic">
             <div class="value">
-                <i class="upload icon green"></i><span id="num_uploads">0</span>
+                <i class="upload icon" style="color:#495b82"></i><span id="num_uploads">0</span>
             </div>
             <div class="label">
                 File Uploads
