--- a/src/apps/copo_core/templates/copo/base.html
+++ b/src/apps/copo_core/templates/copo/base.html
@@ -414,8 +414,8 @@
     <div class="container-fluid" style="display:block">
         <div class="navbar-header">
             <a class="navbar-brand" href="{% url 'copo_profile_index:index' %}">
-                <img class="icon-margin-top" style="height: 45px; margin-left: 0; margin-top: -8px; padding:2px;"
-                     src="{% static "copo/img/COPO_icon_white.png" %}"/>
+                <img class="icon-margin-top" style="height: 45px; margin-left: 0; margin-top: -8px;"
+                     src="{% static "assets/img/COPO-logo-full-CMYK.png" %}"/>
             </a>
             <button type='button' class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="icon-bar"></span>
