--- a/static/assets/css/base_styles.css
+++ b/static/assets/css/base_styles.css
@@ -17,16 +17,20 @@ body {
     padding-right: 0 !important;
 }
 
+.container-fluid nav{
+    background-color: white;
+}
+
 .nav {
-    padding-right: 15px;
+    padding-right: 45px;
 }
 
 .nav li a {
     background-color: transparent !important;
-    color: white !important;
-    font-size: 2em;
+    color: black !important;
+    font-size: 2.2em;
     font-weight: bolder;
-    margin: 10px 5px 0 5px;
+    margin: 15px 15px 0 5px;
 }
 
 #frontpage-navbar {
@@ -90,12 +94,12 @@ body {
 }
 
 #copo-icon {
-    width: 800px;
+    width: 1000px;
     margin: 0 auto;
 }
 
 #copo-icon img {
-    margin-top: 40px !important;
+    width: 100%
 }
 
 .green-subtitle {
