Made grammatical corrections

--- a/src/apps/copo_core/templates/copo/privacy_notice.html
+++ b/src/apps/copo_core/templates/copo/privacy_notice.html
@@ -66,8 +66,8 @@
             </li>
             <li>Email address (after you input it in the dialog shown after a first-time access to the service)</li>
             <li>Date and time when a profile record and manifests are created or updated</li>
-            <li>Metadata submitted. Metadata is the essential inforamtion about when, where, how and why data
-                has been collected. It can relate to research elements like samples, assemblies, sequencing annotaions,
+            <li>Metadata submitted. Metadata is the essential information about when, where, how and why data
+                has been collected. It can relate to research elements like samples, assemblies, sequencing annotations,
                 barcoding, experiments, reads or runs
             </li>
             <li>If you contact us via email, we may receive additional information about you such as the contents of the
