--- a/src/apps/copo_core/templates/copo/terms_of_use.html
+++ b/src/apps/copo_core/templates/copo/terms_of_use.html
@@ -58,7 +58,7 @@
                 Google Fonts, the website performance is optimised and is displayed more beautiful.
                 <br><br>
                 Even though our service self-host Google Fonts on some web pages in order to eliminate 
-                violtaing General Data Protection Regulation (GDPR), there are other web pages in our service that 
+                violating General Data Protection Regulation (GDPR), there are other web pages in our service that 
                 do not. By using the service, you consent for the service to use your IP address so that it can 
                 load the Google Fonts from the Google servers.
             </li>
@@ -108,7 +108,7 @@
             <li>All scientific metadata will be made publicly available after data submission and we may store it
                 permanently.
             </li>
-            <li>The metadata submittted and the <a href="/api">COPO Application Programming Interface (API) methods </a>
+            <li>The metadata submitted and the <a href="/api">COPO Application Programming Interface (API) methods </a>
                 are generated in part from the data contributed by the community who remain the data submitters.
             </li>
             <li>COPO does not guarantee the accuracy of any provided metadata for any purpose. We, however, make all
