Made top navbar CSS style consistent with all web pages

--- a/src/apps/copo_landing_page/templates/about.html
+++ b/src/apps/copo_landing_page/templates/about.html
@@ -36,9 +36,9 @@
 <div class="container" id="home">
     <div class="row text-center">
         <div class="col-md-12 col-md-12 col-sm-12">
-            <h1>
-                <img style="margin-top: 50px" class="header-img" src="/static/assets/img/logo8_white_trans.png"
-                    alt="header image">
+            <h1 style="height: 300px;">
+                <!-- <img style="margin-top: 50px" class="header-img" src="/static/assets/img/logo8_white_trans.png"
+                    alt="header image"> -->
             </h1>
         </div>
     </div>
