--- a/src/apps/copo_landing_page/templates/dtol.html
+++ b/src/apps/copo_landing_page/templates/dtol.html
@@ -31,7 +31,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway|Slabo+27px" rel="stylesheet">
     <link rel="shortcut icon" href="{% static 'copo/img/favicon.png' %}"/>
     <!-- favicon -->
-    <link rel="icon" type="image/png" href="{% static 'copo/img/COPO_icon.png' %}"/>
+    <link rel="icon" type="image/png" href="{% static 'copo/img/favicon_black.png' %}"/>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
