--- a/src/apps/copo_core/templates/copo/base2.html
+++ b/src/apps/copo_core/templates/copo/base2.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway|Slabo+27px" rel="stylesheet">
     <link rel="shortcut icon" href="{% static 'copo/img/favicon.png' %}" />
     <!-- favicon -->
-    <link rel="icon" type="image/png" href="{% static 'copo/img/COPO_icon.png' %}" />
+    <link rel="icon" type="image/png" href="{% static 'copo/img/favicon_black.png' %}" />
 
     <!-- PAGE LEVEL STYLES -->
     {% block stylesheet_block %}{% endblock %}
