--- a/src/apps/copo_landing_page/templates/base1.html
+++ b/src/apps/copo_landing_page/templates/base1.html
@@ -31,8 +31,8 @@
     <script src="{% static 'copo/js/bootstrap.js' %}"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="{% static 'copo/img/favicon.png' %}"/>
-    <script src="{% static "assets/js/landing.js" %}"></script>
+    <link rel="shortcut icon" href="{% static 'copo/img/favicon_black.png' %}"/>
+    <script src="{% static 'assets/js/landing.js' %}"></script>
     {% block headblock %}
     {% endblock %}
     <style>
