--- a/src/apps/copo_landing_page/templates/frontpage.html
+++ b/src/apps/copo_landing_page/templates/frontpage.html
@@ -39,7 +39,7 @@
             </div>
             <br><br><br><br><br><br><br><br><br>
             <div id="copo-icon">
-                <!--<img src="{% static "assets/img/COPO-logo-full-CMYK.png" %}" alt="copo_white image">-->
+                <!--<img src="{% static "assets/img/COPO-logo-full-CMYK-black.png" %}" alt="copo_black image">-->
             </div>
 
             <!--
