--- a/src/apps/copo_landing_page/templates/nav_dropdown.html
+++ b/src/apps/copo_landing_page/templates/nav_dropdown.html
@@ -1,13 +1,13 @@
 {% load web_tags %}
 {% load static %}
-<nav class="navbar navbar-inverse navbar-fixed-top navbar-fixed-left" style="height: 10px !important; min-height: 59px;"
+<nav class="navbar navbar-default navbar-fixed-top navbar-fixed-left" style="height: 10px !important; min-height: 59px;"
      role="navigation">
     <div class="container-fluid" style="display:block">
         <div class="navbar-header">
             <a class="navbar-brand"
                href="{% if user.is_authenticated %} {% url 'copo_profile_index:index' %} {% else %}{% url 'copo_profile_index:index' %}{% endif %}">
                 <img style="height: 45px; margin-left: 12px; margin-top: -8px; padding: 2px;"
-                     src="{% static "assets/img/COPO-logo-full-CMYK.png" %}"
+                     src="{% static 'assets/img/COPO-logo-full-CMYK-black.png' %}"
                      alt="COPO logo">
             </a>
         </div>
