--- a/src/apps/copo_landing_page/templates/people.html
+++ b/src/apps/copo_landing_page/templates/people.html
@@ -29,9 +29,9 @@
     <!-- GOOGLE FONT -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Raleway|Slabo+27px" rel="stylesheet">
-    <link rel="shortcut icon" href="{% static 'copo/img/favicon.png' %}"/>
+    <!-- <link rel="shortcut icon" href="{% static 'copo/img/favicon.png' %}"/> -->
     <!-- favicon -->
-    <link rel="icon" tye="image/png" href="{% static 'copo/img/COPO_icon.png' %}"/>
+    <link rel="icon" type="image/png" href="{% static 'copo/img/favicon_black.png' %}"/>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
