--- a/static/assets/css/base_styles.css
+++ b/static/assets/css/base_styles.css
@@ -17,29 +17,71 @@ body {
     padding-right: 0 !important;
 }
 
-.container-fluid nav{
+/*=======================================
+    NAVIGATION STYLES
+=========================================*/
+
+/* .container-fluid nav{
     background-color: white;
+} */
+
+#frontpage-navbar {
+    font-size: 8px;
+    float: right !important;
+    /*Align top navbar to the right of the web page*/
+    padding-left: 20px;
 }
 
 .nav {
     padding-right: 45px;
 }
 
-.nav li a {
+.navbar-nav>li>a {
+    padding-top: 5px !important;
+    padding-bottom: 5px !important;
+    line-height: 20px !important;
+}
+
+.nav>li>a {
+    padding: 0;
+}
+
+.navbar-default {
+    border-bottom-color: rgba(38, 38, 38, 0.95)!important;
+    border-bottom-width: thin!important;
+}
+
+.navbar-default .navbar-nav>.active>a,
+.navbar-default .navbar-nav>.active>a:hover,
+.navbar-default .navbar-nav>.active>a:focus {
+    background-color: #080808 !important;
+    color: #FFFFFF !important;
+}
+
+.navbar-default .navbar-nav > li > a:hover {
+    background-color: #080808 !important; 
+    color: #FFFFFF !important;
+}
+
+.navbar-default .nav li a {
     background-color: transparent !important;
     color: black !important;
-    font-size: 2.2em;
-    font-weight: bolder;
-    margin: 15px 15px 0 5px;
+    font-size: 2em;
+    font-weight: bold;
+    margin: 15px 15px 0 5px; /*10px 5px 0 5px;*/
 }
 
-#frontpage-navbar {
-    font-size: 8px;
-    float: right !important; /*Align top navbar to the right of the web page*/
-    padding-left: 20px;
+.navbar-inverse .nav li a {
+    background-color: transparent !important;
+    color: white !important;
+    font-size: 2em;
+    font-weight: bold;
+    margin: 15px 15px 0 5px; /*10px 5px 0 5px;*/
 }
 
-.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
+.navbar-inverse .navbar-nav > .active > a, 
+.navbar-inverse .navbar-nav > .active > a:hover, 
+.navbar-inverse .navbar-nav > .active > a:focus {
     background-color: #FFFFFF !important;
     color: #080808 !important;
 }
@@ -47,16 +89,6 @@ body {
 .navbar-inverse .navbar-nav > li > a:hover {
     background-color: #eaf0f0 !important;
     color: #080808 !important;
-}
-
-.navbar-nav > li > a {
-    padding-top: 5px !important;
-    padding-bottom: 5px !important;
-    line-height: 20px !important;
-}
-
-.nav > li > a {
-    padding: 0;
 }
 
 .dropdown-menu {
@@ -72,7 +104,7 @@ body {
     display: none;
     float: left;
     margin: 2px 0 0;
-    background-color: #101010 !important;
+    /* background-color: #101010 !important; */
     -webkit-background-clip: padding-box;
     background-clip: padding-box;
     border: 1px solid rgba(0, 0, 0, .15);
@@ -81,13 +113,35 @@ body {
     box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
 }
 
-.dropdown-menu > li > a:focus, .dropdown-menu > li > a:hover {
+.navbar-default .dropdown-menu {
+    background-color: white !important;
+}
+
+.navbar-default .dropdown-menu>li>a:focus,
+.navbar-default .dropdown-menu>li>a:hover {
+    background-color: black !important;
+    text-decoration: none;
+    color: white !important;
+}
+
+.navbar-default .dropdown-menu>li>a {
+    font-weight: bold;
+    color: black !important;
+    font-size: 14px !important;
+}
+
+.navbar-inverse .dropdown-menu{
+    background-color: #101010 !important;
+}
+
+.navbar-inverse .dropdown-menu > li > a:focus, 
+.navbar-inverse.dropdown-menu > li > a:hover {
     background-color: #d9d9d9 !important;
     text-decoration: none;
     color: #0a0a0a !important;
 }
 
-.dropdown-menu > li > a {
+.navbar-inverse .dropdown-menu > li > a {
     font-weight: bold;
     color: white !important;
     font-size: 14px !important;
@@ -204,9 +258,10 @@ body {
     color: #93d242 !important;
 }
 
-section {
-    /*height: 100vh*/
+/*section {
+    height: 100vh
 }
+*/
 
 .secondary-container {
     padding: 50px 25px 0 50px;
