--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -18,17 +18,6 @@ body {
     color: #444;
 }
 
-.nav a {
-    color: white !important;
-    font-weight: bold;
-}
-
-.navbar-header a {
-    color: #ffffff !important;
-    padding-right: 50px;
-    padding-top: 10px
-}
-
 .text-center {
     text-align: center;
 }
@@ -292,6 +281,18 @@ blockquote {
 /*=======================================
     NAVIGATION STYLES
 ==================================================*/
+.fixed {
+    position: fixed;
+    top: 0;
+    min-height: 50px;
+    z-index: 99;
+}
+
+#frontpage-navbar {
+    font-size: 8px;
+    float: right !important;
+    padding-left: 20px;
+}
 
 /*nav {*/
 /*    position: absolute;*/
@@ -302,59 +303,83 @@ blockquote {
 /*    !*font-size: x-large !important;*!*/
 /*    font-weight: bolder !important;*/
 /*}*/
+
+
+.nav {
+    padding-right: 15px;
+}
+.nav>li>a {
+    padding: 0 12px !important;
+}
+
 /*nav li {*/
 /*    padding-top: 15px*/
 /*}*/
 
-.fixed {
-    position: fixed;
-    top: 0;
-    min-height: 50px;
-    z-index: 99;
-}
-
-/*.navbar-inverse {*/
-/*    !*background-color: rgba(107, 186, 80, 0);*!*/
-/*    background-color: #222;*/
-/*    border-color: white;*/
-/*    min-height: 80px;*/
-/*    padding-top: 0;*/
-/*    font-size: 20px;*/
-/*    padding-bottom: 0;*/
-
-/*}
-
-/*.navbar-brand {
-    font-size: 30px;
-    padding-left: 45px
-}*/
-.nav {
-    padding-right: 15px;
-}
-
-.nav li a {
-    background-color: transparent !important;
+/* .nav a {
     color: white !important;
-    font-size: 2em;
     font-weight: bold;
-    margin: 10px 5px 0 5px;
-}
-
-.nav > li > a {
-    padding: 0 12px !important;
-}
-
-#frontpage-navbar {
-    font-size: 8px;
-    float: right !important;
-    padding-left: 20px;
-}
+} */
 
 .navbar {
     min-height: 55px;
 }
 
-.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
+.navbar-nav>li>a {
+    padding-top: 5px !important;
+    padding-bottom: 5px !important;
+    line-height: 20px !important;
+}
+
+/*.navbar-brand {
+    font-size: 30px;
+    padding-left: 45px
+}*/
+
+.navbar-header a {
+    color: #ffffff !important;
+    padding-right: 50px;
+    padding-top: 10px
+}
+
+.navbar-default {
+    border-bottom-color: rgba(38, 38, 38, 0.95)!important;
+    border-bottom-width: thin!important;
+}
+
+.navbar-default .nav li a {
+    background-color: transparent !important;
+    color: black !important;
+    font-size: 2em;
+    font-weight: bold;
+    margin: 10px 5px 0 5px;
+}
+
+.navbar-default .navbar-nav>.active>a,
+.navbar-default .navbar-nav>.active>a:hover,
+.navbar-default .navbar-nav>.active>a:focus {
+    background-color: #080808 !important;
+    color: #FFFFFF !important;
+}
+
+.navbar-default .navbar-nav>li>a:hover {
+    background-color: #080808 !important;
+    color: #FFFFFF !important;
+}
+
+/*.navbar-inverse {
+    !*background-color: rgba(107, 186, 80, 0);*!
+    background-color: #222;
+    border-color: white;
+    min-height: 80px;
+    padding-top: 0;
+   font-size: 20px;
+   padding-bottom: 0;
+}*/
+
+.navbar-inverse .navbar-nav > .active > a, 
+.navbar-inverse .navbar-nav > .active > a:hover, 
+.navbar-inverse .navbar-nav > .active > a:focus {
     background-color: #FFFFFF !important;
     color: #080808 !important;
 }
@@ -364,10 +389,12 @@ blockquote {
     color: #080808 !important;
 }
 
-.navbar-nav > li > a {
-    padding-top: 5px !important;
-    padding-bottom: 5px !important;
-    line-height: 20px !important;
+.navbar-inverse .nav li a {
+    background-color: transparent !important;
+    color: white !important;
+    font-size: 2em;
+    font-weight: bold;
+    margin: 10px 5px 0 5px;
 }
 
 .dropdown-menu {
@@ -383,7 +410,7 @@ blockquote {
     display: none;
     float: left;
     margin: 2px 0 0;
-    background-color: #101010 !important;
+    /* background-color: #101010 !important; */
     -webkit-background-clip: padding-box;
     background-clip: padding-box;
     border: 1px solid rgba(0, 0, 0, .15);
@@ -392,13 +419,35 @@ blockquote {
     box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
 }
 
-.dropdown-menu > li > a:focus, .dropdown-menu > li > a:hover {
+.navbar-default .dropdown-menu {
+    background-color: white !important;
+}
+
+.navbar-default .dropdown-menu>li>a:focus,
+.navbar-default .dropdown-menu>li>a:hover {
+    background-color: black!important;
+    text-decoration: none;
+    color: white !important;
+}
+
+.navbar-default .dropdown-menu>li>a {
+    font-weight: bold;
+    color: black !important;
+    font-size: 14px !important;
+}
+
+.navbar-inverse .dropdown-menu {
+    background-color: #101010 !important;
+}
+
+.navbar-inverse .dropdown-menu > li > a:focus, 
+.navbar-inverse .dropdown-menu > li > a:hover {
     background-color: #d9d9d9 !important;
     text-decoration: none;
     color: #0a0a0a !important;
 }
 
-.dropdown-menu > li > a {
+.navbar-inverse .dropdown-menu > li > a {
     font-weight: bold;
     color: white !important;
     font-size: 14px !important;
@@ -406,7 +455,7 @@ blockquote {
 
 /*=======================================
     WORK FLOW STYLES
-==================================================*/
+=========================================*/
 
 .work-div {
     width: 100%;
@@ -417,7 +466,7 @@ blockquote {
 
 /*=======================================
     CONTACT STYLES
-==================================================*/
+==========================================*/
 
 #social-icon a {
     color: #616161 !important;
